--- a/Neo4j.Samples.Application/Neo4j.Samples.Application.csproj
+++ b/Neo4j.Samples.Application/Neo4j.Samples.Application.csproj
@@ -9,9 +9,11 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.3" />
+        <PackageReference Include="Neo4j.Driver" Version="5.8.0" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.0.1" />
+     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Neo4j.Samples.Domain\Neo4j.Samples.Domain.csproj" />
