--- a/Neo4j.Samples/appsettings.json
+++ b/Neo4j.Samples/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "Neo4jSamplesDB": "Server=localhost,1433; Database=Neo4jSamplesDB; User ID=sa; Password=YourPassword123; TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
