--- a/Neo4j.Samples/appsettings.Development.json
+++ b/Neo4j.Samples/appsettings.Development.json
@@ -1,9 +1,13 @@
 ﻿{
+  "ConnectionStrings": {
+    "Neo4jSamplesDB": "Server=localhost,1433; Database=Neo4jSamplesDB; User ID=sa; Password=YourPassword123; TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
 
